--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "opendata_plr",
+  "name": "opendata-local-server",
   "version": "1.0.0",
+  "description": "Local server for opendata project",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "axios": "^1.7.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "xml2js": "^0.6.2"
   }
 }
